# algoritmos-distribuidos-pedro

./: Cargo.toml  README.md  build.rs
src/4c/: main.rs
src/node_1/: request.rs
src/node_2/proto/: request.proto
